--- a/css/theme-fixes.css
+++ b/css/theme-fixes.css
@@ -2,7 +2,7 @@
     margin-bottom: 0;
 }
 
-.wy-nav-side { overflow: inherit; } 
+.wy-nav-side { overflow: inherit; }
 
 /* Code blocks */
 pre > code {
@@ -23,4 +23,12 @@ pre {
     border: 1px solid #e1e4e5;
     background: #fff;
     margin: 1px 0 24px 0;
+}
+
+ul {
+    list-style-type: disc;
+}
+
+ol {
+    ist-style-type: decimal;
 }
