--- a/css/theme-fixes.css
+++ b/css/theme-fixes.css
@@ -27,10 +27,12 @@ pre {
 
 ul, ul>li {
     list-style-type: disc;
+    padding-left: 10px;
 }
 
 ol, ol>li {
     list-style-type: decimal;
+    padding-left: 10px;
 }
 
 ol, ul {
